--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "@vueuse/core": "^13.1.0",
     "element-plus": "^2.10.2",
+    "gsap": "^3.12.7",
     "highlight.js": "^11.11.1",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
